# app/Http/Requests/Api/TrainingIndexRequest.php
@@ -15,8 +15,6 @@ class TrainingIndexRequest extends FormRequest
     {
         return [
             'search' => ['sometimes', 'nullable', 'string', 'max:255'],
-            'title' => ['sometimes', 'nullable', 'string', 'max:255'],
-            'provider' => ['sometimes', 'nullable', 'string', 'max:255'],
             'page' => ['sometimes', 'integer', 'min:1'],
         ];
     }
